--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "@types/morgan": "^1.9.9",
   "@types/multer": "^1.4.11",
   "@types/node": "^20.14.2",
+  "@types/uuid": "^10.0.0",
   "concurrently": "^8.2.2",
   "cpx": "^1.5.0",
   "prettier": "^3.3.2",
@@ -44,6 +45,8 @@
   "jsonwebtoken": "^9.0.2",
   "mongoose": "^8.4.1",
   "morgan": "^1.10.0",
-  "multer": "^1.4.5-lts.1"
+  "multer": "^1.4.5-lts.1",
+  "stripe": "^15.12.0",
+  "uuid": "^10.0.0"
  }
 }
